# kdb-quickfix-plugin

./: .gitignore  README.md  build.sh
.cargo/: config
helloWorld/: CMakeLists.txt  libHelloWorld.def
helloWorld2/: Cargo.toml  HelloWorld2.def  README.md  build.ps1  build.sh  helloWorld2.q
helloWorld2/src/: lib.rs
images/: diagram.uml
lib/: README.md
